--- a/writing/sections/figures_and_tables.Rmd
+++ b/writing/sections/figures_and_tables.Rmd
@@ -27,7 +27,7 @@ cache$del(key = "lock", namespace = "session")
 
 ```
 
-# Abundance-driven vs. observed change
+# Figure 1. Abundance-driven vs. observed change
 
 ```{r, fig.dim = c(5,3)}
 
@@ -109,7 +109,7 @@ timeseries_plot <- ggplot(dat_dynamics, aes(timeperiod, total_biomass, color = s
   scale_color_viridis_d(option = "cividis",begin = .2,  end = .8) + 
   theme(legend.position = "none") +
   xlab("Year") +
-  ylab("Total biomass")
+  ylab("Biomass")
 
 #timeseries_plot
 ```
@@ -124,7 +124,7 @@ two_plots
 
 #### Figure 1. 
 
-Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The orange points show the true values for total biomass in each year, and the purple points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013), which do not have a slope significantly different from zero (slope term p = .27). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (purple) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (orange) scenario, individuals' body sizes are estimated based on their actual species identities. For this route, species composition has shifted over time, resulting in distinct ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
+Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The gold points show the true values for total biomass in each year, and the blue points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013), which do not have a slope significantly different from zero (slope term p = .27). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (blue) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (gold) scenario, individuals' body sizes are estimated based on their actual species identities. For this route, species composition has shifted over time and produced different ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
 
 \newpage
 
@@ -160,9 +160,9 @@ winning_fits <- delta_2 %>%
 
 slope_winning_fits <- winning_fits %>%
   filter(modelcomplexity > 1)
-
-interaction_winning_fits <- winning_fits %>%
-  filter(modelcomplexity > 2)
+# 
+# interaction_winning_fits <- winning_fits %>%
+#   filter(modelcomplexity > 2)
 
 
 biomass_slopes_long <- slope_winning_fits %>%
@@ -205,21 +205,29 @@ winning_fits_energy <- delta_2_energy %>%
 
 slope_winning_fits_energy <- winning_fits_energy %>%
   filter(modelcomplexity > 1)
-
-interaction_winning_fits_energy <- winning_fits_energy %>%
-  filter(modelcomplexity > 2)
+# 
+# interaction_winning_fits_energy <- winning_fits_energy %>%
+#   filter(modelcomplexity > 2)
 
 
 energy_slopes_long <- slope_winning_fits_energy %>%
   select(matssname, ratio_sim, ratio_real) %>%
   tidyr::pivot_longer(-matssname, names_to = "source", values_to = "energy_ratio") %>%
   mutate(simtype = ifelse(source == "ratio_sim", "Abundance driven", "Observed"))
+
+
+
+winning_fits_both <- winning_fits %>%
+  mutate(currency = "biomass") %>%
+  bind_rows(mutate(winning_fits_energy, currency = "energy"))
+
+
 ```
 
 
 \newpage
 
-# Slopes
+# Figure 2. Directions and magnitudes of change.
 
 ```{r, fig.dim = c(4,4)}
 
@@ -238,112 +246,95 @@ slope_histograms
 
 #### Figure 2. Long-term trends in total biomass and energy use
 
-Histograms showing the direction and magnitude of change over time for the abundance-driven (left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 500/739 routes; for energy use, 506/739 routes). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The abundance-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities with no significant interaction term in the best-fitting model, the "abundance-driven" and "observed" ratios will be the same; interaction terms will result in different ratios for "abundance-driven" and "observed" dynamics. 
+Histograms showing the direction and magnitude of change over time for the abundance-driven (left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 500/739 routes; for energy use, 509/739 routes). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The abundance-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities with no significant interaction term in the best-fitting model, the "abundance-driven" and "observed" ratios will be the same; interaction terms will result in different ratios for "abundance-driven" and "observed" dynamics. 
 
-Abundance-driven dynamics are dominated by decreases. For biomass, observed dynamics are balanced evenly between increases and decreases - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases, more closely mirroring the trends expected given changes in abundance. 
-
-\newpage
-
-# Model outcomes 
-
-## Biomass
-
-Overall proportion of routes with winning models:
-
-```{r, results =T}
-
-winning_fits %>% group_by(model_family, model_formula) %>% tally() %>%
-  mutate(prop = n / sum(n))
-
-```
-
-Of models with slope term, the proportion for which abundance and biomass are increasing:
-
-```{r}
-
-slope_winning_fits %>%
-  mutate(abundance_increasing = ratio_sim > 1) %>%
-  group_by(abundance_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-
-slope_winning_fits %>%
-  mutate(biomass_increasing = ratio_real > 1) %>%
-  group_by(biomass_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-```
-
-
-<!-- Restricted to models with an *interaction*: -->
-
-<!-- ```{r} -->
-<!-- interaction_winning_fits %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-
-
-<!-- interaction_winning_fits %>% -->
-<!--   mutate(biomass_increasing = ratio_real > 1) %>% -->
-<!--   group_by(biomass_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-
-<!-- ``` -->
-
-## Metabolic flux
-
-Overall proportion of routes with winning models:
-
-```{r, results =T}
-
-winning_fits_energy %>% group_by(model_family, model_formula) %>% tally() %>%
-  mutate(prop = n / sum(n))
-
-```
-
-Of models with slope term, the proportion for which abundance and biomass are increasing:
-
-```{r}
-
-slope_winning_fits_energy %>%
-  mutate(abundance_increasing = ratio_sim > 1) %>%
-  group_by(abundance_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-slope_winning_fits_energy %>%
-  mutate(energy_increasing = ratio_real > 1) %>%
-  group_by(energy_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-```
-
-
-<!-- Restricted to models with an *interaction*: -->
-
-<!-- ```{r} -->
-<!-- interaction_winning_fits_energy %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-
-
-<!-- interaction_winning_fits_energy %>% -->
-<!--   mutate(energy_increasing = ratio_real > 1) %>% -->
-<!--   group_by(energy_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-
-<!-- ``` -->
+Among routes with temporal trends, there are qualitatively different continental-wide patterns in abundance-driven and observed dynamics for total biomass and total metabolic flux. 70% of trends in abundance-driven dynamics for energy use are decreasing, and 67% for biomass. However, for biomass, observed dynamics are balanced evenly between increases (49% of routes) and decreases (51%) - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases (35% of routes), more closely mirroring the trends expected given changes in abundance. 
 
 \newpage
 
-# Visualizing decoupling
+# Tables: Model outcomes
+
+<!-- and directions of trends  -->
+
+### Table 1.
+
+```{r model outcomes table, results = T}
+
+model_outcomes_table <- winning_fits_both %>%
+  select(matssname, model_family, model_formula, currency)  %>%
+  group_by(currency, model_formula) %>%
+  summarize(n = dplyr::n()) %>%
+  ungroup() %>%
+  group_by(currency) %>%
+  mutate(nmods = sum(n)) %>%
+  mutate(prop = n / nmods) 
+
+model_outcomes_table_pretty <- model_outcomes_table %>%
+  mutate(currency = ifelse(currency == "biomass", "Total biomass", "Total metabolic flux")) %>%
+  mutate(prop_rounded = round(prop, digits = 2),
+         form_pretty = ifelse(grepl("1", model_formula), "Intercept-only", ifelse(grepl("source", model_formula), "Decoupled trend", "Trend, not decoupled"))) %>%
+  select(currency, form_pretty, n, prop_rounded) %>%
+  rename(`Selected model` = form_pretty,
+         `Number of routes` = n,
+         `Proportion of routes` = prop_rounded,
+         Currency = currency) 
+
+model_outcomes_table_pretty
+
+```
+#### Table 1. Selected models.
+
+Table of the number and proportion of routes whose dynamics for total biomass and total energy use are best-fit by: a model with no temporal trend (intercept-only model, `response ~ 1`); a model with a temporal trend, but no difference in trend between observed and abundance-driven dynamics (`response ~ timeperiod`); or a model with decoupled temporal trends for observed and abundance-driven dynamics (`response ~ timeperiod * source`). 
+
+For 31-32% of routes, models with trends do not outperform simple intercept-only models. For the remaining routes, in most instances, the dynamics of biomass and energy use exhibit a temporal trend, but with no detectable difference in the temporal trends for abundance-driven and observed dynamics. However, for a substantial minority of routes (20% overall for biomass, or 30% of routes with a temporal trend; 7% overall for energy use, or 10% of routes with a temporal trend), there is a detectable deviation between the trends expected due only to changes in abundance and the observed dynamics. 
+
+<!-- ### Table 2. -->
+
+
+<!-- ```{r} -->
+
+<!-- slope_winning_fits <- filter(winning_fits_both, modelcomplexity > 1) %>% -->
+<!--   mutate(abundance_driven_increase = ratio_sim > 1, -->
+<!--          observed_increase = ratio_real > 1)  -->
+
+<!-- slope_winning_fits_summary <- slope_winning_fits %>% -->
+<!--   group_by(currency) %>% -->
+<!--   summarize(n_with_slope = dplyr::n(), -->
+<!--             n_abundance_increase = sum(abundance_driven_increase), -->
+<!--             n_observed_increase = sum(observed_increase), -->
+<!--             prop_abundance_increase = round(mean(abundance_driven_increase), digits = 2), -->
+<!--             prop_observed_increase = round(mean(observed_increase), digits = 2)) -->
+
+<!-- slope_winning_fits_pretty <- slope_winning_fits_summary %>% -->
+<!--   mutate(currency = ifelse(currency == "biomass", "Total biomass", "Total metabolic flux")) %>% -->
+<!--   select(currency,  -->
+<!--          # n_abundance_increase, -->
+<!--          # n_observed_increase,  -->
+<!--          prop_abundance_increase,  -->
+<!--          prop_observed_increase,  -->
+<!--          n_with_slope) %>% -->
+<!--   rename(Currency = currency, -->
+<!--          # `Number of routes with abundance-driven increase`= n_abundance_increase, -->
+<!--          # `Number of routes with observed increase`  = n_observed_increase, -->
+<!--          `Proportion of increasing abundance-driven trends` = prop_abundance_increase, -->
+<!--          `Proportion of increasing observed trends` = prop_observed_increase, -->
+<!--          `Number of routes with temporal trends` = n_with_slope) -->
+
+<!-- slope_winning_fits_pretty -->
+
+<!-- ``` -->
+
+<!-- #### Table 2. Direction of temporal trends in abundance-driven and observed dynamics. -->
+
+<!-- Restricted to the routes exhibiting temporal trends in total biomass and total metabolic flux, the proportion of trends that are increasing (specifically, the ratio of the last fitted value to the first fitted value > 1) for abundance-driven and observed dynamics. Trends that are not increasing are decreasing.  -->
+
+<!-- Trends in abundance-driven dynamics are dominated by *declines* (67% of routes for total biomass, and 70% of routes for total energy). Observed dynamics for biomass differ qualitatively from the abundance-driven dynamics; observed trends in biomass are evenly divided between increases and decreases (49% increasing). Observed trends in energy use more closely mirror abundance-driven trends (65% declines).  -->
+
+<!-- I think Table 2 can be removed/folded into the legend of Figure 2. -->
+
+\newpage
+
+# Figure 3. Visualizing decoupling
 
 ```{r}
 
@@ -401,7 +392,7 @@ decoupling_plot
 ```
 
 
-# How the ISD contributes to decoupling
+# Figure 4. How the ISD contributes to decoupling
 
 ```{r}
 
