these are reasonable figs and tables

--- a/writing/sections/figures_and_tables.Rmd
+++ b/writing/sections/figures_and_tables.Rmd
@@ -124,7 +124,7 @@ two_plots
 
 #### Figure 1. 
 
-Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The gold points show the true values for total biomass in each year, and the blue points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013), which do not have a slope significantly different from zero (slope term p = .27). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (blue) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (gold) scenario, individuals' body sizes are estimated based on their actual species identities. For this route, species composition has shifted over time and produced different ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
+Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The gold points show the true values for total biomass in each year, and the blue points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (blue) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (gold) scenario, individuals' body sizes are estimated based actual species abundances at each time step. For this route, species composition has shifted over time and produced different ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
 
 \newpage
 
@@ -381,8 +381,8 @@ decoupling_plot <- ggplot(all_interaction, aes(ratio_sim, ratio_real, color = `B
   scale_color_viridis_d(option = "mako", end = .8, direction = -1) + 
   theme(legend.position = "bottom") + 
   geom_abline(intercept = 0, slope = 1) + 
-  geom_vline(xintercept = 1) + 
-  geom_hline(yintercept = 1) +
+ geom_vline(xintercept = 1, linetype = 2) + 
+  geom_hline(yintercept = 1, linetype =2) +
   xlab("Abundance-driven change \n Ratio of last fitted value to first fitted value") + 
   ylab("Observed change \n Ratio of last fitted value to first fitted value") +
   facet_wrap(vars(currency), ncol = 2)
@@ -392,6 +392,15 @@ decoupling_plot
 ```
 
 
+#### Figure 3. Decoupling between abundance-driven and observed trends.
+
+Observed change (ratio of last fitted value to first fitted value, y-axis) in total biomass (left) and total metabolic flux (right) compared to the change expected only due to changes in total abundance (ratio of last fitted value to first fitted value, x-axis). Values greater than 1 (dashed horizontal and vertical lines) mark positive (increasing) trends, while values less than 1 are negative trends. Each point marks the fitted values from a Gamma log-link generalized linear model of the form `response ~ year * source` for a given route. This estimates separate long-term slopes for observed and abundance-driven dynamics. Points are colored corresponding to the best-fitting model (intercept-only, or "no trend"; a slope for year but no difference in slopes between observed and abundance-driven dynamics, or "coupled trend", and separate slopes for observed and abundance-driven dynamics, "decoupled trends") for each route. Deviations from the 1:1 line (solid black line) reflect changes in the community size structure that modulate the relationship between total abundance and total biomass or energy use. 
+
+Changes in total biomass and total energy use generally track changes driven by fluctuations in total abundance, with appreciable scatter around the 1:1 line. When this translates into a statistically detectable decoupling between observed and abundance-driven dynamics ("Decoupled trends"), this is usually in the form of abundance-driven change being more negative (a steeper decline or a smaller increase) than observed change in biomass or energy use (a less steep decline or larger increase), and occurs more strongly and frequently for biomass than for metabolic flux.
+
+
+ \newpage
+ 
 # Figure 4. How the ISD contributes to decoupling
 
 ```{r}
@@ -412,8 +421,22 @@ isd_mean_change_plot <-  ggplot(winning_fits, aes(real_mass_ratio, color = `Best
   xlab("Ratio of mean mass\n(last five years / first five years)") +
   ylab("Count") +
   ggtitle("Change in mean body size")
-
-#isd_mean_change_plot
+# 
+# mean_change_coupled <- filter(winning_fits, modelcomplexity == 2)
+# mean_change_decoupled <- filter(winning_fits, modelcomplexity == 4)
+# mean_change_nt <- filter(winning_fits, modelcomplexity == 1)
+# 
+# ks.test(mean_change_coupled$ratio_real, mean_change_decoupled$ratio_real)
+# 
+# 
+# ks.test(mean_change_coupled$real_overlap, mean_change_decoupled$real_overlap)
+# 
+# ks.test(mean_change_coupled$real_overlap, mean_change_nt$real_overlap)
+# 
+# 
+# ks.test(mean_change_decoupled$real_overlap, mean_change_nt$real_overlap)
+# 
+# ks.test(c(mean_change_nt$real_overlap,mean_change_coupled$real_overlap), mean_change_decoupled$real_overlap)
 
 
 ```
@@ -447,7 +470,14 @@ isd_change_plots <- multi_panel_figure(columns = 2, rows = 1) %>%
 isd_change_plots
 ```
 
-R2 of binomial GLM `overlap ~ model_formula` (which does not beat a `overlap ~ 1` via AIC, FYI)
+
+#### Figure 4. Histograms of change in the size structure for routes showing no trends, coupled, and decoupled trends in abundance-driven and observed dynamics.
+
+Histograms of (A) change in mean body size from the first to the last five years of monitoring and (B) overall change in the size structure for routes whose dynamics for  total biomass were best-described using no temporal trend (bottom row; intercept-only model), separate trends for observed and abundance-driven dynamics (middle row), or the same trend for observed and abundance-driven dynamics (top row). Change in mean body size (A) is calculated as the ratio of the mean body size of all individuals observed in the last 5 years of the timeseries relative to the mean body size of all individuals observed in the first 5 years. Overall change in the ISD (B) is calculated as the degree of overlap between the ISDs for the first and last five years of the timeseries (see text). 
+
+Routes that exhibit decoupling between observed and abundance-driven changes in total biomass exhibit a high prevalence of increases and decreases in mean body size (middle row, panel A) compared to the changes seen in routes that show either no trend or non-decoupled trends. However, routes with all three signatures of dynamics (coupling, decoupling, or no trend) are comparable in the degree of overall change in the ISD over time (panel B).
+
+<!-- I am working on methods for comparing these statistically. Depending on the approach I use I get small differences in overlap for the decoupled vs. not-decoupled dynamics, with terrible R2 (like <5%), and obviously the mean body size changes are pronounced. The mean body size changes are mathematically forced.  -->
 
 ```{r}
 #glm_cor
